--- a/learn_something/functional-javascript-01/02. ES6에서의 순회와 이터러블 이터레이터 프로토콜/index.html
+++ b/learn_something/functional-javascript-01/02. ES6에서의 순회와 이터러블 이터레이터 프로토콜/index.html
@@ -1,15 +1,15 @@
-<script>const log = console.log;</script>
+<script>
+  const log = console.log;
+</script>
 
-## 기존과 달라진 ES6에서의 리스트 순회
-- for i++
-- for of
+## 기존과 달라진 ES6에서의 리스트 순회 - for i++ - for of
 
 <script>
   const list = [1, 2, 3];
   for (var i = 0; i < list.length; i++) {
     // log(list[i]);
   }
-  const str = 'abc';
+  const str = "abc";
   for (var i = 0; i < str.length; i++) {
     // log(str[i]);
   }
@@ -24,7 +24,7 @@
 ### Array를 통해 알아보기
 
 <script>
-  log('Arr -----------');
+  log("Arr -----------");
   const arr = [1, 2, 3];
   let iter1 = arr[Symbol.iterator]();
   for (const a of iter1) log(a);
@@ -33,7 +33,7 @@
 ### Set을 통해 알아보기
 
 <script>
-  log('Set -----------');
+  log("Set -----------");
   const set = new Set([1, 2, 3]);
   for (const a of set) log(a);
 </script>
@@ -41,20 +41,22 @@
 ### Map을 통해 알아보기
 
 <script>
-  log('Map -----------');
-  const map = new Map([['a', 1], ['b', 2], ['c', 3]]);
+  log("Map -----------");
+  const map = new Map([
+    ["a", 1],
+    ["b", 2],
+    ["c", 3],
+  ]);
   for (const a of map.keys()) log(a);
   for (const a of map.values()) log(a);
   for (const a of map.entries()) log(a);
   console.clear();
 </script>
 
-## 이터러블/이터레이터 프로토콜
-- 이터러블: 이터레이터를 리턴하는 [Symbol.iterator]() 를 가진 값
-- 이터레이터: { value, done } 객체를 리턴하는 next() 를 가진 값
-- 이터러블/이터레이터 프로토콜: 이터러블을 for...of, 전개 연산자 등과 함께 동작하도록한 규약
-
-### 사용자 정의 이터러블을 통해 알아보기
+## 이터러블/이터레이터 프로토콜 - 이터러블: 이터레이터를 리턴하는
+[Symbol.iterator]() 를 가진 값 - 이터레이터: { value, done } 객체를 리턴하는
+next() 를 가진 값 - 이터러블/이터레이터 프로토콜: 이터러블을 for...of, 전개
+연산자 등과 함께 동작하도록한 규약 ### 사용자 정의 이터러블을 통해 알아보기
 
 <script>
   const iterable = {
@@ -62,13 +64,14 @@
       let i = 3;
       return {
         next() {
-          return i == 0 ? {done: true} : {value: i--, done: false};
+          return i == 0 ? { done: true } : { value: i--, done: false };
         },
         [Symbol.iterator]() {
+          // well formed iterator가 되기 위해선 자기 자신을 반환하며 이터레이터이여야 한다
           return this;
-        }
-      }
-    }
+        },
+      };
+    },
   };
   let iterator = iterable[Symbol.iterator]();
   iterator.next();
@@ -84,8 +87,8 @@
   // log(iter2[Symbol.iterator]() == iter2);
   // for (const a of iter2) log(a);
 
-  for (const a of document.querySelectorAll('*')) log(a);
-  const all = document.querySelectorAll('*');
+  for (const a of document.querySelectorAll("*")) log(a);
+  const all = document.querySelectorAll("*");
   let iter3 = all[Symbol.iterator]();
   log(iter3.next());
   log(iter3.next());
